# Aperio-J

./: .dockerignore  .env.example  .gitattributes  .gitignore  CHANGELOG.md  Dockerfile  README.md  README.zh-CN.md  START-HERE.md  docker-compose.yml  package.json  pnpm-lock.yaml  render.yaml  tsconfig.base.json
.github/workflows/: ci.yml  installers.yml  release.yml
apps/desktop/: .env.signing.example  package.json  (+1 more)
apps/desktop/src-tauri/: .gitignore  Cargo.toml  tauri.android.conf.json  tauri.conf.json  tauri.ios.conf.json  tauri.linux.conf.json  tauri.windows.conf.json
apps/desktop/src-tauri/capabilities/: default.json  mobile.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs
design-system/: MASTER.md
docs/: authenticated-streams.md  connector-architecture.md  connector-roadmap.md  cron.md  deployment.md  desktop-mobile.md  discovery-and-matching.md  discovery-engine-roadmap.md  discovery-reset.md  engine-locales.md  frontend-spec.md  i18n.md  onboarding-questionnaire.md  platform-vision.md  probe-packs.md  profile-settings.md  release.md  roadmap.md  source-discovery-design.md  source-types.md  taxonomy.md  ui-redesign.md  vision.md
probe-packs/: README.md  zh-CN-shenzhen-electronics-community.json
scripts/: android-preflight.sh  build-selfhost.mjs  connector-smoke.mjs  docker-entrypoint.sh  ensure-turso-schema.mjs  fixture-run.mjs  generate-metro-catalog.mjs  prepare-release-installers.mjs  rebuild-native-modules.mjs  resolve-release-web-url.mjs  source-discovery-run.mjs  stage-web-standalone.mjs  turso-schema-sql.mjs
(+170 files in other folders)
