[package]
name = "aperio-j-desktop"
version = "0.3.0"
description = "Local-first employment opportunity engine"
authors = ["aperio-j"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.11.5", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
